--- a/src/myShop.html
+++ b/src/myShop.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no,minimum-scale=1.0, maximum-scale=1.0">
     <meta name="format-detection" content="telephone=no" />
-    <title>服务-广场</title>
+    <title>我的店铺</title>
 
     <link rel="stylesheet" href="vendor.css" >
     <link rel="stylesheet" href="myShop.css" >
@@ -34,11 +34,10 @@
 <div class="page">
     <header>
         <a class="me-text" href="http://action:52008" target="_top">付货</a>
-        <a class="back material-design" data-color="#fff" href="http://action:3413/">记录</a>
 
         <h1><div class="title">我的店铺</div></h1>
 
-        <div class="right"><a href="search.html" class="tab-search"></a></div>
+        <div class="right"><a href="search.html" class="">记录</a></div>
     </header>
 
     <div class="page-body" id="squareBody">
