添加图标字体 font-awesome

--- a/src/myShop.html
+++ b/src/myShop.html
@@ -33,7 +33,7 @@
 <body>
 <div class="page">
     <header>
-        <a class="me-text" href="http://action:52008" target="_top">付货</a>
+        <a class="me-text" href="http://action:52008" target="_top"><i class="fa fa-diamond" aria-hidden="true"></i>付货</a>
 
         <h1><div class="title">我的店铺</div></h1>
 
